# john-crickett-weekly

./: .gitignore
c#/JsonParser/: JSON.cs
c#/JsonParser/JsonTree/: JsonNode.cs  ListNode.cs  NullNode.cs  ObjectNode.cs  PrimitiveNode.cs
c#/UnitTests/JsonParser.UnitTests/: JSONUnitTests.cs  JsonParser.UnitTests.csproj
c/ccwc/: .ccwc.c.swp  \  a.out  ccwc.c
cpp/01-wc/src/: Options.h  main.cpp
cpp/01-wc/test/: unit_options.cpp
cpp/01-wc/test/input/: reader.txt
cpp/02-json-parser/: JsonNode.h  main.cpp
cpp/03-compression-tool/src/: HuffmanEngine.h  HuffmanFactory.h  main.cpp
cpp/03-compression-tool/src/encoder/: CharCounter.h  Decoder.h  HuffmanTree.h
cpp/03-compression-tool/src/utils/: Reader.h  StringUtils.h  Writer.h
cpp/03-compression-tool/tests/encoder/: test_CharCounter.cpp  test_Decoder.cpp  test_Encoder.cpp  test_HuffmanTree.cpp
cpp/03-compression-tool/tests/input/: testAscii.txt
cpp/03-compression-tool/tests/integration/: tests_integration.cpp
cpp/03-compression-tool/tests/utils/: test_Reader.cpp  test_StringUtils.cpp
cpp/04-cut/: cccut
cpp/04-cut/src/: Grid.h  Reader.h  main.cpp
cpp/04-cut/test/: unit_StringUtils.cpp
cpp/05-load-balancer/: .gitignore  CMakeLists.txt  be  lb
cpp/05-load-balancer/src/: Client.h  Http.h  Request.h  Server.h
cpp/05-load-balancer/src/be/: main.cpp
cpp/05-load-balancer/src/lb/: main.cpp
cpp/05-load-balancer/src/lib/: Logger.h  StringUtils.h
cpp/05-load-balancer/test/: unit_Logger.cpp  unit_Server.cpp
cpp/cccut/: .gitignore  CMakeLists.txt  cccut
cpp/cccut/src/: Grid.h  Logger.h  Options.h  StringUtils.h  main.cpp
cpp/cccut/test/: unit_Grid.cpp  unit_Logger.cpp  unit_Options.cpp
cpp/ccwc/: .gitignore  CMakeLists.txt
cpp/ccwc/test/: unit_reader.cpp
cpp/ccwcut/src/: Reader.h
cpp/ccwcut/test/: unit_Reader.cpp
cpp/huffman-encoding/: .gitignore  CMakeLists.txt
cpp/huffman-encoding/src/: ByteConverter.h  CharCounter.h  Decoder.h  Encoder.h  HuffmanEngine.h  HuffmanFactory.h  HuffmanTree.h  Reader.h  StringUtils.h  Writer.h  main.cpp
cpp/huffman-encoding/src/encoder/: CharCounter.h  Decoder.h  Encoder.h  HuffmanTree.h
cpp/huffman-encoding/src/utils/: ByteConverter.h  Reader.h  StringUtils.h  Writer.h
cpp/huffman-encoding/tests/: testAscii.txt  testFileStr.txt  test_ByteConverter.cpp  test_CharCounter.cpp  test_Decoder.cpp  test_Encoder.cpp  test_HuffmanTree.cpp  test_Reader.cpp  test_StringUtils.cpp  test_Writer.cpp  tmp
cpp/huffman-encoding/tests/encoder/: test_CharCounter.cpp  test_Decoder.cpp  test_Encoder.cpp  test_HuffmanTree.cpp
cpp/huffman-encoding/tests/integration/: tests_integration.cpp
cpp/huffman-encoding/tests/utils/: test_ByteConverter.cpp  test_Reader.cpp  test_StringUtils.cpp  test_Writer.cpp
cpp/json-parser/: CMakeLists.txt  JsonNode.h  Lexer.h  Parser.h  Token.h  main.cpp
cpp/wc-tool/: CMakeLists.txt  ccwc
cpp/wc-tool/src/: Options.h  Reader.h  Scanner.h  main.cpp
cpp/wc-tool/test/: integration_test.cpp  test_main.cpp  unit_reader.cpp  unit_scanner.cpp
